# zephyr-thread-rt58x

./: .gitattributes  .gitignore  BUILD_GUIDE.md  CLAUDE.md  CMakeLists.txt  COMMANDS.md  Kconfig  Kconfig.module  README.md  mcuboot.conf  prj.conf  west.yml
.claude/: settings.json
.claude/memory/: MEMORY.md  feedback_no_auto_commit.md  project_zephyr_thread_session.md
.github/workflows/: build.yml
boards/arm/rt582_evb/: Kconfig.board  Kconfig.defconfig  Kconfig.rt582_evb  board.yml  rt582_evb.dts  rt582_evb.yaml  rt582_evb_defconfig  rt582_evb_slot1.overlay
boards/arm/rt583_evb/: Kconfig.board  Kconfig.defconfig  Kconfig.rt583_evb  board.cmake  board.yml  rt583_evb.dts  rt583_evb.yaml  rt583_evb_defconfig  rt583_evb_slot1.overlay
boards/arm/rt584_evb/: Kconfig.board  Kconfig.defconfig  Kconfig.rt584_evb  board.cmake  board.yml  rt584_evb.dts  rt584_evb.yaml  rt584_evb_defconfig
cmake/zephyr_module/: CMakeLists.txt
cmake/zephyr_serial/: CMakeLists.txt
debug/: debug_rt584.ps1  rt584_diag.gdb  rt584_t0_survey.gdb
docs/: BUILD_GUIDE.md  build-guide.md
docs/rt584_tfm/: P2_psa_arch_tests_results.md  README.md  SG6_anti_rollback_followup.md  T0_ns_alias_survey.md  TMSA.md
drivers/bluetooth/: Kconfig  hci_rafael.c  hci_rt582.c  hci_rt583.c
drivers/entropy/: CMakeLists.txt  Kconfig  entropy_rt583.c  entropy_rt584.c
drivers/flash/: CMakeLists.txt  Kconfig  flash_rt582.c  flash_rt582_hal.c  flash_rt583.c  flash_rt583_hal.c  flash_rt584.c  flash_rt584_hal.c
drivers/hosal/rt582_hosal/Inc/: hosal_dma.h  hosal_dpd.h  hosal_qspi.h  hosal_rtc.h  hosal_sysctrl.h
drivers/ieee802154/: Kconfig  ieee802154_rafael.c  ieee802154_rt583.c
drivers/net/: dummy_net_if.c
drivers/serial/: CMakeLists.txt  Kconfig  uart_rt582.c  uart_rt583.c  uart_rt584.c
dts/arm/rafael/: rt582.dtsi  rt583.dtsi  rt584.dtsi
dts/bindings/: vendor-prefixes.txt
dts/bindings/bluetooth/: rafael,rt582-bt-hci.yaml  rafael,rt583-bt-hci.yaml  rafael,rt584-bt-hci.yaml
dts/bindings/flash/: rafael,rt582-flash.yaml  rafael,rt583-flash.yaml  rafael,rt584-flash.yaml
dts/bindings/ieee802154/: rafael,rt583-ieee802154.yaml  rafael,rt584-ieee802154.yaml
dts/bindings/misc/: rafael,rt583-trng.yaml  rafael,rt584-trng.yaml
dts/bindings/serial/: rafael,rt582-uart.yaml  rafael,rt583-uart.yaml  rafael,rt584-uart.yaml
examples/ble/peripheral/hrs/: CMakeLists.txt  prj.conf
examples/ble/peripheral/hrs/boards/: rt583_evb.conf  rt584_evb.conf
examples/ble/peripheral/hrs/src/: main.c
examples/ble/peripheral/hrs/sysbuild/mcuboot/: prj.conf
examples/ble/peripheral/hrs/sysbuild/mcuboot/boards/: rt583_evb.overlay
examples/ble/test_hci/: CMakeLists.txt  prj.conf
examples/ble/test_hci/src/: main.c
examples/blinky/: CMakeLists.txt  prj.conf  sysbuild.conf
examples/blinky/src/: main.c
examples/blinky/sysbuild/mcuboot/: app.overlay  prj.conf
examples/blinky/sysbuild/mcuboot/boards/: rt583_evb.overlay
examples/bootloader/: mcuboot-matter.overlay  mcuboot.conf  mcuboot.overlay
examples/hello_world/: CMakeLists.txt  prj.conf  sysbuild.conf
examples/hello_world/src/: main.c
examples/hello_world/sysbuild/: mcuboot.overlay
examples/hello_world/sysbuild/mcuboot/: app.overlay  prj.conf
examples/hello_world/sysbuild/mcuboot/boards/: rt583_evb.overlay
examples/hello_world_bare/: CMakeLists.txt  app.overlay  prj.conf
examples/hello_world_bare/src/: main.c
examples/matter/lighting-app/: CMakeLists.txt  lighting-app.matter  lighting-app.zap  prj.conf
examples/matter/lighting-app/boards/: rt583_evb.conf  rt583_evb.overlay  rt584_evb.conf
examples/matter/lighting-app/main/: AppTask.cpp  MallocWrappers.cpp  ZclCallbacks.cpp  ecp_enum_compat.c  main.cpp
examples/matter/lighting-app/main/include/: AppEvent.h  AppTask.h  CHIPProjectConfig.h
examples/matter/lighting-app/mbedtls_shim/mbedtls/: bignum.h  ecp.h  pk.h
examples/matter/lighting-app/scripts_shim/: python_path.py
examples/matter/lighting-app/src/: AppTask.cpp  CryptoSelfTest.cpp  MallocWrappers.cpp  ZclCallbacks.cpp  ecp_enum_compat.c  main.cpp
examples/matter/lighting-app/src/include/: AppEvent.h  AppTask.h  CHIPProjectConfig.h
examples/matter/lighting-app/sysbuild/: mcuboot.conf
examples/matter/lighting-app/sysbuild/mcuboot/: app.overlay  prj.conf
examples/matter/lighting-app/sysbuild/mcuboot/boards/: rt583_evb.overlay
examples/psa_arch_tests/: CMakeLists.txt  prj.conf
examples/psa_arch_tests/pal/: pal_driver_intf.c
examples/psa_arch_tests/src/: main.c
examples/psa_hello/: CMakeLists.txt  prj.conf
examples/psa_hello/src/: main.c
examples/thread/: CMakeLists.txt  prj.conf  sysbuild.conf
examples/thread/boards/: rt583_evb.conf  rt584_evb.conf
examples/thread/src/: main.c  ota_app.c  ota_app.h
examples/thread/sysbuild/mcuboot/: app.overlay  prj.conf
examples/thread/sysbuild/mcuboot/boards/: rt583_evb.overlay
scripts/: build.ps1  install.ps1  setup.ps1  strip_printk_newlines.py  uninstall.ps1  west-commands.yml
scripts/linux/: build.sh  flash.sh  install.sh  minicom.sh  uninstall.sh
scripts/macos/: build.sh  flash.sh  install.sh  uninstall.sh
scripts/west_commands/: flash_isp.py
scripts/windows/: attach-serial.ps1  attach-usb.ps1  bootstrap.ps1  build.ps1  build_all.ps1  flash.ps1  install.ps1  reset.ps1  test_board.ps1  uninstall.ps1
soc/arm/rafael_micro/: CMakeLists.txt  Kconfig.series
src/: main.c  tprintk.h
subsys/ble/: CMakeLists.txt
subsys/openthread/: CMakeLists.txt  Kconfig
subsys/openthread/platform/: freertos_shim.c  hosal_rf_zephyr.c  log_shim.c  openthread-core-rt582-zephyr-config.h  openthread_port.h  ot_alarm.c  ot_logging.c  ot_matter_sysq.c  ot_memory.c  ot_radio.c  ot_settings.c  ot_uart.c  ot_zephyr.c  rt583_otsys.c  rt584_compat.c
subsys/ota/: CMakeLists.txt  Kconfig  ota.h  ota_coap.c  ota_flash.c  ota_internal.h
tests/flash/: CMakeLists.txt  prj.conf
tests/flash/src/: main.c
tools/isp_cli/: isp_cli.spec  isp_client.py  isp_portref.py
tools/linux/: flash.sh
tools/windows/: attach-usb.ps1  hci_monitor.py
zephyr/: module.yml
(+504 files in other folders)
